# my_first_agent

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07_structured_output.ipynb
src/agents/: rag.py  simple.py
